--- a/DostavkaNaMarket/Pages/_Layout.cshtml
+++ b/DostavkaNaMarket/Pages/_Layout.cshtml
@@ -16,6 +16,9 @@
     <script src="~/js/bootstrap.js"></script>
 
     <script src="~/js/OrderInModal.js"></script>
+
+    <script src="~/js/BlazorDownloadFile.js"></script>
+
     
     <script src="_content/BlazorDateRangePicker/clickAndPositionHandler.js"></script>
     <link rel="stylesheet" href="_content/BlazorDateRangePicker/daterangepicker.min.css" />
