--- a/DostavkaNaMarket/Pages/Admin.razor
+++ b/DostavkaNaMarket/Pages/Admin.razor
@@ -540,28 +540,76 @@
 
     public async Task Excel()
     {
-        FileInfo file = new FileInfo(@"D:\Base.xlsx");
-        byte[] fileContents;
+        FileInfo file = new FileInfo(@"D:\C#\WebApp\DostavkaNaMarket\DostavkaNaMarket\wwwroot\Base.xlsx");
         ExcelPackage.LicenseContext = LicenseContext.NonCommercial;
         using (ExcelPackage excelPackage = new ExcelPackage(file))
         {
-            //Get a WorkSheet by index. Note that EPPlus indexes are base 1, not base 0!
             ExcelWorksheet ws = excelPackage.Workbook.Worksheets["Sheet"];
 
-            //Get the content from cells A1 and B1 as string, in two different notations
-            ws.Cells["B26"].Value = "10";
+            //Номер и дата заказа
+            ws.Cells["I4"].Value = $"Договор на оказание транспортных услуг №{orderNumAdm} от {dateOrderAdm} г.{cityAdm}";
 
-            //Save your file
-            excelPackage.SaveAs(new FileInfo(@"D:\myworkbook.xlsx"));
+            //Адрес
+            if((clientAdressAdm == null) |(clientAdressAdm == ""))
+            {
+                ws.Cells["F8"].Value = $"{cityAdm}";
+            }
+            else
+            {
+                ws.Cells["F8"].Value = $"{clientAdressAdm}";
+            }
 
-            fileContents = excelPackage.GetAsByteArray();
+            //Имя клиента
+            ws.Cells["F10"].Value = $"{clientNameAdm}";
 
+            // Номер телефона
+            ws.Cells["Q9"].Value = $"{clientPhoneAdm}";
+
+            // Дата отправки
+            ws.Cells["K12"].Value = $"{dateDeviveryAdm}";
+
+            //Склад
+            if((dateDeviveryAdm.Substring(0, 2)) == "пн")
+            {
+                ws.Cells["F17"].Value = $"Коледино";
+            }
+            else if((dateDeviveryAdm.Substring(0, 2)) == "ср")
+            {
+                ws.Cells["F17"].Value = $"Электросталь";
+            }
+
+            //ШК коробок, цена и количество
+            ws.Cells["C26"].LoadFromCollection(barCodesAdm);
+
+            var sourceRangePrice = ws.Cells[$"O26:O{25+(barCodesAdm.Count)}"];
+            if(paymentMethodAdm == "Карта")
+            {
+                sourceRangePrice.Value = 204;
+            }
+            else if(paymentMethodAdm == "Наличные")
+            {
+                sourceRangePrice.Value = 200;
+            }
+
+            var sourceRangeCount = ws.Cells[$"N26:N{25+(barCodesAdm.Count)}"];
+            sourceRangeCount.Value = 1;
+
+            if(getMethodAdm == "Нужен вывоз")
+            {
+                ws.Cells[$"C{26+(barCodesAdm.Count)}"].Value = "Вывоз";
+                ws.Cells[$"O{26+(barCodesAdm.Count)}"].Value = 400;
+            }
+            
+
+            //Общее количество коробок
+            ws.Cells["N40"].Value = barCodesAdm.Count;
+
+            //Общая сумма
+            ws.Cells["O40"].Value = finalAmountAdm;
+
+
+            byte[] fileContents = excelPackage.GetAsByteArray();
             await JSRuntime.InvokeVoidAsync("BlazorDownloadFile", "BlazorFile.xlsx", Convert.ToBase64String(fileContents));
-            //await JSRuntime.InvokeVoidAsync(
-            //    "blazorDownloadFile", 
-            //    "BlazorSample1.xlsx", 
-            //    "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
-            //    excelPackage.GetAsByteArray());
 
         }
         
